bug80087, fix style issue in shift editor.
bug80087, fix style issue in shift editor.

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_teamschedule.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_teamschedule.scss
@@ -1225,8 +1225,9 @@ shift-editor {
 		.timespan {
 			background-color: $gray-300;
 			border-radius: 2px;
-			padding: 2px 5px;
+			padding: 0 5px;
 			margin: 0 5px;
+			line-height: 30px;
 		}
 
 		.activity-selector {
